Style bug fix: error message was not showing red; ES6 conversion for javascript files.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -49,7 +49,7 @@
 
     .error {
         @include fontSizeAlign(24px, center);
-        font-color: #ff0000;
+        color: #ff0000;
     }
 
     .tweetRow:nth-child(odd) {
